# piecemeal

./: '  Main.hs  README.md  piecemeal.cabal
lib/: Piecemeal.hs
