cabal-version:       2.0
name:                piecemeal
version:             1.0.0.0
synopsis:            Update a record value using HTTP PATCH requests.

description:         Update a record value using HTTP PATCH requests.

license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Network
extra-source-files:  CHANGELOG.md,
                     README.md
build-type:          Simple

source-repository head
    type: git
    location: https://github.com/danidiaz/piecemeal.git

library
  exposed-modules:     Piecemeal
  build-depends:       base                 >= 4.10.0.0 && < 5,
                       sop-core             >= 0.4.0.0 && < 0.6,
                       red-black-record     >= 2.1.0.0 && < 2.2,
                       servant              >= 0.16.2 && < 0.17,
                       servant-server       >= 0.16.2 && < 0.17,
                       aeson                >= 1.4.5.0 && < 1.5
  hs-source-dirs:      lib
  default-language:    Haskell2010

